<resources>
    <string name="app_name">TicTacToe</string>
    <string name="empty" />
    <string name="cross">X</string>
    <string name="nought">0</string>
    <string name="title">Tic Tac Toe \n by vitalii314</string>
    <string name="xWin">\"X\" WIN!</string>
    <string name="draw">DRAW!</string>
    <string name="oWin">\"0\" WIN!</string>
    <string name="start_against_player">Start against player</string>
    <string name="start_against_cpu">Start against CPU</string>
    <string name="special_text"><![CDATA[Specially designed for Max&Miha]]></string>
    <string name="title_activity_against_cpu">AgainstCpuActivity</string>
</resources>
