<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/main_background2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/main_background"
        android:autoText="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/empty"
        android:id="@+id/textResult"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:layout_centerVertical="true" />

    <Button
        android:layout_width="@dimen/button_start_width"
        android:layout_height="@dimen/button_start_height"
        android:text="@string/start_against_player"
        android:id="@+id/startPlayer"
        android:onClick="onStartAgainstPlayerClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp" />

    <Button
        android:layout_width="@dimen/button_start_width"
        android:layout_height="@dimen/button_start_height"
        android:text="@string/start_against_cpu"
        android:id="@+id/startComputer"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/startPlayer"
        android:layout_alignStart="@+id/startPlayer"
        android:layout_marginBottom="9dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/special_text"
        android:id="@+id/textSpecialDesign"
        android:layout_below="@+id/textTitle"
        android:layout_centerHorizontal="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>
</RelativeLayout>
